--- a/config/content.htm
+++ b/config/content.htm
@@ -1,7 +1,7 @@
 <h1>About</h1>
 <p>github:<a href="https://github.com/40823107/cd2021">https://github.com/40823107/cd2021</a></p>
 <p>site:<a href="https://40823107.github.io/cd2021/">https://40823107.github.io/cd2021/</a><span>.</span></p>
-<h1>Task</h1>
+<p><img alt="" height="236" src="/images/677438.jpg" width="420"/></p><h1>Task</h1>
 <h2>W1</h2>
 <h2>W2</h2>
 <h1>影片</h1>
