--- a/content/index.html
+++ b/content/index.html
@@ -136,7 +136,7 @@ img.add_border {
     <div id="tipue_search_content"> <a href='Task.html'>Next</a> >> Task<br /><h1>About</h1>
 <p>github:<a href="https://github.com/40823107/cd2021">https://github.com/40823107/cd2021</a></p>
 <p>site:<a href="https://40823107.github.io/cd2021/">https://40823107.github.io/cd2021/</a><span>.</span></p>
-<br /> <a href='Task.html'>Next</a> >> Task</div>
+<p><img alt="" height="236" src="./../images/677438.jpg" width="420"/></p><br /> <a href='Task.html'>Next</a> >> Task</div>
         
     <!-- footer -->
       <div class="container">
