--- a/config/content.htm
+++ b/config/content.htm
@@ -3,5 +3,6 @@
 <p>site:<a href="https://40823107.github.io/cd2021/">https://40823107.github.io/cd2021/</a><span>.</span></p>
 <p><img alt="" height="236" src="/images/677438.jpg" width="420"/></p><h1>Task</h1>
 <h2>W1</h2>
-<h2>W2</h2>
+<p>討論小組主題</p>
+<p><span>stage1-ag8 機械手臂</span><br/><span>動機:爸爸搬重物很辛苦，希望他可以減輕負擔</span><br/><span>第二周:繪製零件圖</span><br/><span>第三周:進行coppeliasim模擬</span><br/><span>第四周:報告</span></p><h2>W2</h2>
 <h1>影片</h1>
