--- a/content/W1.html
+++ b/content/W1.html
@@ -134,7 +134,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Task << <a href='Task.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
-<br />Task << <a href='Task.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
+<p>討論小組主題</p>
+<p><span>stage1-ag8 機械手臂</span><br/><span>動機:爸爸搬重物很辛苦，希望他可以減輕負擔</span><br/><span>第二周:繪製零件圖</span><br/><span>第三周:進行coppeliasim模擬</span><br/><span>第四周:報告</span></p><br />Task << <a href='Task.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
         
     <!-- footer -->
       <div class="container">
