--- a/content/stage2-ag8.html
+++ b/content/stage2-ag8.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a></li></ul><li><a href='影片.html'>影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題.html'>主題</a></li></ul><li><a href='stage2-ag8.html'>stage2-ag8</a><li><a href='stage3-ag3.html'>stage3-ag3</a><li><a href='影片.html'>影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,9 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Task << <a href='Task.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
-<p>討論小組主題</p>
-<p><span>stage1-ag8 機械手臂</span><br/><span>動機:爸爸搬重物很辛苦，希望他可以減輕負擔</span><br/><span>第二周:繪製零件圖</span><br/><span>第三周:進行coppeliasim模擬</span><br/><span>第四周:報告</span></p><br />Task << <a href='Task.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
+    <div id="tipue_search_content">主題 << <a href='主題.html'>Previous</a> <a href='stage3-ag3.html'>Next</a> >> stage3-ag3<br /><h1>stage2-ag8</h1>
+<br />主題 << <a href='主題.html'>Previous</a> <a href='stage3-ag3.html'>Next</a> >> stage3-ag3</div>
         
     <!-- footer -->
       <div class="container">
