--- a/content/About.html
+++ b/content/About.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a></li></ul><li><a href='影片.html'>影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題.html'>主題</a></li></ul><li><a href='stage2-ag8.html'>stage2-ag8</a><li><a href='stage3-ag3.html'>stage3-ag3</a><li><a href='影片.html'>影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,10 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Task.html'>Next</a> >> Task<br /><h1>About</h1>
+    <div id="tipue_search_content"> <a href='stage1-ag8.html'>Next</a> >> stage1-ag8<br /><h1>About</h1>
 <p>github:<a href="https://github.com/40823107/cd2021">https://github.com/40823107/cd2021</a></p>
 <p>site:<a href="https://40823107.github.io/cd2021/">https://40823107.github.io/cd2021/</a><span>.</span></p>
-<p><img alt="" height="236" src="./../images/677438.jpg" width="420"/></p><br /> <a href='Task.html'>Next</a> >> Task</div>
+<p><img alt="" height="236" src="./../images/677438.jpg" width="420"/></p>
+<br /> <a href='stage1-ag8.html'>Next</a> >> stage1-ag8</div>
         
     <!-- footer -->
       <div class="container">
