--- a/content/stage1-ag8.html
+++ b/content/stage1-ag8.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a></li></ul><li><a href='影片.html'>影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題.html'>主題</a></li></ul><li><a href='stage2-ag8.html'>stage2-ag8</a><li><a href='stage3-ag3.html'>stage3-ag3</a><li><a href='影片.html'>影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W1.html'>Next</a> >> W1<br /><h1>Task</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='W1.html'>Next</a> >> W1</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='主題.html'>Next</a> >> 主題<br /><h1>stage1-ag8</h1>
+<br />About << <a href='About.html'>Previous</a> <a href='主題.html'>Next</a> >> 主題</div>
         
     <!-- footer -->
       <div class="container">
