--- a/content/影片.html
+++ b/content/影片.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a></li></ul><li><a href='影片.html'>影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題.html'>主題</a></li></ul><li><a href='stage2-ag8.html'>stage2-ag8</a><li><a href='stage3-ag3.html'>stage3-ag3</a><li><a href='影片.html'>影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <br /><h1>影片</h1><br />W2 << <a href='W2.html'>Previous</a> </div>
+    <div id="tipue_search_content">stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> <br /><h1>影片</h1><br />stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
