--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -3,9 +3,11 @@
 <p>site:<a href="https://40823107.github.io/cd2021/">https://40823107.github.io/cd2021/</a><span>.</span></p>
 <p><img alt="" height="236" src="/images/677438.jpg" width="420"/></p>
 <h1>stage1-ag8</h1>
-<h2>W1</h2>
+<h2>主題</h2>
 <p>討論小組主題</p>
 <p><span>stage1-ag8 機械手臂</span><br/><span>動機:爸爸搬重物很辛苦，希望他可以減輕負擔</span><br/><span>第二周:繪製零件圖</span><br/><span>第三周:進行coppeliasim模擬</span><br/><span>第四周:報告</span></p>
+<h2><span>零件</span></h2>
+<h2><span>coppeliasim模擬</span></h2>
 <h1>stage2-ag8</h1>
 <h1>stage3-ag3</h1>
 <h1>影片</h1>
