--- a/content/coppeliasim模擬.html
+++ b/content/coppeliasim模擬.html
@@ -133,7 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> <br /><h1>影片</h1><br />stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> </div>
+    <div id="tipue_search_content">零件 << <a href='零件.html'>Previous</a> <a href='stage2-ag8.html'>Next</a> >> stage2-ag8<br /><h1>coppeliasim模擬</h1>
+<br />零件 << <a href='零件.html'>Previous</a> <a href='stage2-ag8.html'>Next</a> >> stage2-ag8</div>
         
     <!-- footer -->
       <div class="container">
