--- a/content/零件.html
+++ b/content/零件.html
@@ -133,7 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> <br /><h1>影片</h1><br />stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> </div>
+    <div id="tipue_search_content">主題 << <a href='主題.html'>Previous</a> <a href='coppeliasim模擬.html'>Next</a> >> coppeliasim模擬<br /><h1>零件</h1>
+<br />主題 << <a href='主題.html'>Previous</a> <a href='coppeliasim模擬.html'>Next</a> >> coppeliasim模擬</div>
         
     <!-- footer -->
       <div class="container">
