--- a/content/index.html
+++ b/content/index.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題.html'>主題</a></li></ul><li><a href='stage2-ag8.html'>stage2-ag8</a><li><a href='stage3-ag3.html'>stage3-ag3</a><li><a href='影片.html'>影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題.html'>主題</a><li><a href='零件.html'>零件</a><li><a href='coppeliasim模擬.html'>coppeliasim模擬</a></li></ul><li><a href='stage2-ag8.html'>stage2-ag8</a><li><a href='stage3-ag3.html'>stage3-ag3</a><li><a href='影片.html'>影片</a></li>
                       </ul>
                 </nav>
               </div>
