--- a/content/主題.html
+++ b/content/主題.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題.html'>主題</a></li></ul><li><a href='stage2-ag8.html'>stage2-ag8</a><li><a href='stage3-ag3.html'>stage3-ag3</a><li><a href='影片.html'>影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題.html'>主題</a><li><a href='零件.html'>零件</a><li><a href='coppeliasim模擬.html'>coppeliasim模擬</a></li></ul><li><a href='stage2-ag8.html'>stage2-ag8</a><li><a href='stage3-ag3.html'>stage3-ag3</a><li><a href='影片.html'>影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,10 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage1-ag8 << <a href='stage1-ag8.html'>Previous</a> <a href='stage2-ag8.html'>Next</a> >> stage2-ag8<br /><h1>主題</h1>
+    <div id="tipue_search_content">stage1-ag8 << <a href='stage1-ag8.html'>Previous</a> <a href='零件.html'>Next</a> >> 零件<br /><h1>主題</h1>
 <p>討論小組主題</p>
 <p><span>stage1-ag8 機械手臂</span><br/><span>動機:爸爸搬重物很辛苦，希望他可以減輕負擔</span><br/><span>第二周:繪製零件圖</span><br/><span>第三周:進行coppeliasim模擬</span><br/><span>第四周:報告</span></p>
-<br />stage1-ag8 << <a href='stage1-ag8.html'>Previous</a> <a href='stage2-ag8.html'>Next</a> >> stage2-ag8</div>
+<p><span>參考圖片</span></p>
+<p><span><img alt="" height="201" src="./../images/1.jpg" width="346"/></span></p><br />stage1-ag8 << <a href='stage1-ag8.html'>Previous</a> <a href='零件.html'>Next</a> >> 零件</div>
         
     <!-- footer -->
       <div class="container">
