--- a/config/content.htm
+++ b/config/content.htm
@@ -8,7 +8,9 @@
 <p><span>stage1-ag8 機械手臂</span><br/><span>動機:爸爸搬重物很辛苦，希望他可以減輕負擔</span><br/><span>第二周:繪製零件圖</span><br/><span>第三周:進行coppeliasim模擬</span><br/><span>第四周:報告</span></p>
 <p><span>參考圖片</span></p>
 <p><span><img alt="" height="201" src="/images/1.jpg" width="346"/></span></p><h2>零件</h2>
-<h2>coppeliasim模擬</h2>
+<p>組合件</p>
+<p><img alt="" height="250" src="/images/組合.png" width="299"/></p>
+<p></p><h2>coppeliasim模擬</h2>
 <h1>stage2-ag8</h1>
 <h1>stage3-ag3</h1>
 <h1>影片</h1>
