--- a/content/零件.html
+++ b/content/零件.html
@@ -134,7 +134,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">主題 << <a href='主題.html'>Previous</a> <a href='coppeliasim模擬.html'>Next</a> >> coppeliasim模擬<br /><h1>零件</h1>
-<br />主題 << <a href='主題.html'>Previous</a> <a href='coppeliasim模擬.html'>Next</a> >> coppeliasim模擬</div>
+<p>組合件</p>
+<p><img alt="" height="250" src="./../images/組合.png" width="299"/></p>
+<p></p><br />主題 << <a href='主題.html'>Previous</a> <a href='coppeliasim模擬.html'>Next</a> >> coppeliasim模擬</div>
         
     <!-- footer -->
       <div class="container">
