--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -16,11 +16,13 @@
 <p><img alt="" height="394" src="/images/3.png" width="300"/></p>
 <p>連接件</p>
 <p><img alt="" height="377" src="/images/6.png" width="300"/></p>
+<p><img alt="" height="411" src="/images/4.png" width="300"/></p>
+<p><img alt="" height="441" src="/images/7.png" width="300"/></p>
 <p></p>
 <p>底座</p>
 <p><img alt="" height="439" src="/images/8.png" width="300"/></p>
 <p><img alt="" height="327" src="/images/2.png" width="300"/></p>
 <p></p><h2>coppeliasim模擬</h2>
-<h1>stage2-ag8</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/3yt087L3Jt4" width="560"></iframe></p><h1>stage2-ag8</h1>
 <h1>stage3-ag3</h1>
 <h1>影片</h1>
