--- a/config/content.htm
+++ b/config/content.htm
@@ -7,7 +7,8 @@
 <p>討論小組主題</p>
 <p><span>stage1-ag8 機械手臂</span><br/><span>動機:爸爸搬重物很辛苦，希望他可以減輕負擔</span><br/><span>第二周:繪製零件圖</span><br/><span>第三周:進行coppeliasim模擬</span><br/><span>第四周:報告</span></p>
 <p><span>參考圖片</span></p>
-<p><span><img alt="" height="201" src="/images/1.jpg" width="346"/></span></p><h2>零件</h2>
+<p><span><img alt="" height="201" src="/images/1.jpg" width="346"/></span></p>
+<h2>零件</h2>
 <p>組合件</p>
 <p><img alt="" height="259" src="/images/組合.png" width="310"/></p>
 <p>夾爪x2</p>
@@ -22,7 +23,12 @@
 <p>底座</p>
 <p><img alt="" height="439" src="/images/8.png" width="300"/></p>
 <p><img alt="" height="327" src="/images/2.png" width="300"/></p>
-<p></p><h2>coppeliasim模擬</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/3yt087L3Jt4" width="560"></iframe></p><h1>stage2-ag8</h1>
+<p></p>
+<h2>coppeliasim模擬</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/3yt087L3Jt4" width="560"></iframe></p>
+<h1>stage2-ag8</h1>
+<h2>主題</h2>
+<h2>零件</h2>
+<h2>模擬</h2>
 <h1>stage3-ag3</h1>
 <h1>影片</h1>
