--- a/content/stage2-ag8.html
+++ b/content/stage2-ag8.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題.html'>主題</a><li><a href='零件.html'>零件</a><li><a href='coppeliasim模擬.html'>coppeliasim模擬</a></li></ul><li><a href='stage2-ag8.html'>stage2-ag8</a><li><a href='stage3-ag3.html'>stage3-ag3</a><li><a href='影片.html'>影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題-1.html'>主題-1</a><li><a href='零件-1.html'>零件-1</a><li><a href='coppeliasim模擬.html'>coppeliasim模擬</a></li></ul><li class='has-children'><a href='stage2-ag8.html'>stage2-ag8</a><ul class='dropdown'><li><a href='主題-2.html'>主題-2</a><li><a href='零件-2.html'>零件-2</a><li><a href='模擬.html'>模擬</a></li></ul><li><a href='stage3-ag3.html'>stage3-ag3</a><li><a href='影片.html'>影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">coppeliasim模擬 << <a href='coppeliasim模擬.html'>Previous</a> <a href='stage3-ag3.html'>Next</a> >> stage3-ag3<br /><h1>stage2-ag8</h1>
-<br />coppeliasim模擬 << <a href='coppeliasim模擬.html'>Previous</a> <a href='stage3-ag3.html'>Next</a> >> stage3-ag3</div>
+    <div id="tipue_search_content">coppeliasim模擬 << <a href='coppeliasim模擬.html'>Previous</a> <a href='主題-2.html'>Next</a> >> 主題-2<br /><h1>stage2-ag8</h1>
+<br />coppeliasim模擬 << <a href='coppeliasim模擬.html'>Previous</a> <a href='主題-2.html'>Next</a> >> 主題-2</div>
         
     <!-- footer -->
       <div class="container">
