--- a/content/主題-1.html
+++ b/content/主題-1.html
@@ -133,8 +133,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">模擬 << <a href='模擬.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片<br /><h1>stage3-ag3</h1>
-<br />模擬 << <a href='模擬.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片</div>
+    <div id="tipue_search_content">stage1-ag8 << <a href='stage1-ag8.html'>Previous</a> <a href='零件-1.html'>Next</a> >> 零件-1<br /><h1>主題-1</h1>
+<p>討論小組主題</p>
+<p><span>stage1-ag8 機械手臂</span><br/><span>動機:爸爸搬重物很辛苦，希望他可以減輕負擔</span><br/><span>第二周:繪製零件圖</span><br/><span>第三周:進行coppeliasim模擬</span><br/><span>第四周:報告</span></p>
+<p><span>參考圖片</span></p>
+<p><span><img alt="" height="201" src="./../images/1.jpg" width="346"/></span></p>
+<br />stage1-ag8 << <a href='stage1-ag8.html'>Previous</a> <a href='零件-1.html'>Next</a> >> 零件-1</div>
         
     <!-- footer -->
       <div class="container">
