--- a/content/主題-2.html
+++ b/content/主題-2.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">模擬 << <a href='模擬.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片<br /><h1>stage3-ag3</h1>
-<br />模擬 << <a href='模擬.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片</div>
+    <div id="tipue_search_content">stage2-ag8 << <a href='stage2-ag8.html'>Previous</a> <a href='零件-2.html'>Next</a> >> 零件-2<br /><h1>主題-2</h1>
+<br />stage2-ag8 << <a href='stage2-ag8.html'>Previous</a> <a href='零件-2.html'>Next</a> >> 零件-2</div>
         
     <!-- footer -->
       <div class="container">
