--- a/content/模擬.html
+++ b/content/模擬.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">模擬 << <a href='模擬.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片<br /><h1>stage3-ag3</h1>
-<br />模擬 << <a href='模擬.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片</div>
+    <div id="tipue_search_content">零件-2 << <a href='零件-2.html'>Previous</a> <a href='stage3-ag3.html'>Next</a> >> stage3-ag3<br /><h1>模擬</h1>
+<br />零件-2 << <a href='零件-2.html'>Previous</a> <a href='stage3-ag3.html'>Next</a> >> stage3-ag3</div>
         
     <!-- footer -->
       <div class="container">
