--- a/content/零件-1.html
+++ b/content/零件-1.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題.html'>主題</a><li><a href='零件.html'>零件</a><li><a href='coppeliasim模擬.html'>coppeliasim模擬</a></li></ul><li><a href='stage2-ag8.html'>stage2-ag8</a><li><a href='stage3-ag3.html'>stage3-ag3</a><li><a href='影片.html'>影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題-1.html'>主題-1</a><li><a href='零件-1.html'>零件-1</a><li><a href='coppeliasim模擬.html'>coppeliasim模擬</a></li></ul><li class='has-children'><a href='stage2-ag8.html'>stage2-ag8</a><ul class='dropdown'><li><a href='主題-2.html'>主題-2</a><li><a href='零件-2.html'>零件-2</a><li><a href='模擬.html'>模擬</a></li></ul><li><a href='stage3-ag3.html'>stage3-ag3</a><li><a href='影片.html'>影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">主題 << <a href='主題.html'>Previous</a> <a href='coppeliasim模擬.html'>Next</a> >> coppeliasim模擬<br /><h1>零件</h1>
+    <div id="tipue_search_content">主題-1 << <a href='主題-1.html'>Previous</a> <a href='coppeliasim模擬.html'>Next</a> >> coppeliasim模擬<br /><h1>零件-1</h1>
 <p>組合件</p>
 <p><img alt="" height="259" src="./../images/組合.png" width="310"/></p>
 <p>夾爪x2</p>
@@ -148,7 +148,8 @@ img.add_border {
 <p>底座</p>
 <p><img alt="" height="439" src="./../images/8.png" width="300"/></p>
 <p><img alt="" height="327" src="./../images/2.png" width="300"/></p>
-<p></p><br />主題 << <a href='主題.html'>Previous</a> <a href='coppeliasim模擬.html'>Next</a> >> coppeliasim模擬</div>
+<p></p>
+<br />主題-1 << <a href='主題-1.html'>Previous</a> <a href='coppeliasim模擬.html'>Next</a> >> coppeliasim模擬</div>
         
     <!-- footer -->
       <div class="container">
