--- a/content/RoboDK.html
+++ b/content/RoboDK.html
@@ -133,7 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> <br /><h1>RoboDK</h1><br />stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> </div>
+    <div id="tipue_search_content">stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> <br /><h1>RoboDK</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/OzVrltmZmNE" width="560"></iframe></p><br />stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
