--- a/config/content.htm
+++ b/config/content.htm
@@ -31,7 +31,11 @@
 <h2>零件</h2>
 <h2>模擬</h2>
 <h1>stage3-ag3</h1>
-<h1>RoboDK</h1>
+<h1>Task</h1>
+<h2>Task1</h2>
+<h2>Task2</h2>
+<h2>Task3</h2>
+<h2>RoboDK</h2>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/OzVrltmZmNE" width="560"></iframe></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">from robolink import *    # API to communicate with robodk
 from robodk import *      # robodk robotics toolbox
