--- a/content/Task3.html
+++ b/content/Task3.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='主題-1.html'>Next</a> >> 主題-1<br /><h1>stage1-ag8</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='主題-1.html'>Next</a> >> 主題-1</div>
+    <div id="tipue_search_content">Task2 << <a href='Task2.html'>Previous</a> <a href='RoboDK.html'>Next</a> >> RoboDK<br /><h1>Task3</h1>
+<br />Task2 << <a href='Task2.html'>Previous</a> <a href='RoboDK.html'>Next</a> >> RoboDK</div>
         
     <!-- footer -->
       <div class="container">
