--- a/content/Task.html
+++ b/content/Task.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='主題-1.html'>Next</a> >> 主題-1<br /><h1>stage1-ag8</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='主題-1.html'>Next</a> >> 主題-1</div>
+    <div id="tipue_search_content">stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> <a href='Task1.html'>Next</a> >> Task1<br /><h1>Task</h1>
+<br />stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> <a href='Task1.html'>Next</a> >> Task1</div>
         
     <!-- footer -->
       <div class="container">
