--- a/content/Task1.html
+++ b/content/Task1.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='主題-1.html'>Next</a> >> 主題-1<br /><h1>stage1-ag8</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='主題-1.html'>Next</a> >> 主題-1</div>
+    <div id="tipue_search_content">Task << <a href='Task.html'>Previous</a> <a href='Task2.html'>Next</a> >> Task2<br /><h1>Task1</h1>
+<br />Task << <a href='Task.html'>Previous</a> <a href='Task2.html'>Next</a> >> Task2</div>
         
     <!-- footer -->
       <div class="container">
