--- a/content/Task2.html
+++ b/content/Task2.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='主題-1.html'>Next</a> >> 主題-1<br /><h1>stage1-ag8</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='主題-1.html'>Next</a> >> 主題-1</div>
+    <div id="tipue_search_content">Task1 << <a href='Task1.html'>Previous</a> <a href='Task3.html'>Next</a> >> Task3<br /><h1>Task2</h1>
+<br />Task1 << <a href='Task1.html'>Previous</a> <a href='Task3.html'>Next</a> >> Task3</div>
         
     <!-- footer -->
       <div class="container">
