--- a/content/Task2.html
+++ b/content/Task2.html
@@ -134,7 +134,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">second task << <a href='second task.html'>Previous</a> <a href='Task3.html'>Next</a> >> Task3<br /><h1>Task2</h1>
-<br />second task << <a href='second task.html'>Previous</a> <a href='Task3.html'>Next</a> >> Task3</div>
+<p>請各組員分別將個人在 stage1 與 stage2 所完成的 coppeliasim 場景, 採 Python remote API 進行操控, 並將過程拍成影片後, 放在個人與分組網站上.</p>
+<p>stage3 專案中的 CoppeliaSim 請一律使用 <a href="https://www.coppeliarobotics.com/downloads">4.2.0 版</a>.</p>
+<p></p>
+<p></p><br />second task << <a href='second task.html'>Previous</a> <a href='Task3.html'>Next</a> >> Task3</div>
         
     <!-- footer -->
       <div class="container">
