--- a/config/content.htm
+++ b/config/content.htm
@@ -1,8 +1,8 @@
 <h1>About</h1>
 <p>github:<a href="https://github.com/40823107/cd2021">https://github.com/40823107/cd2021</a></p>
+<p>gitlab:<a href="https://gitlab.com/40823107/cd2021">https://gitlab.com/40823107/cd2021</a>(無法同步)</p>
 <p>site:<a href="https://40823107.github.io/cd2021/">https://40823107.github.io/cd2021/</a><span>.</span></p>
-<p><img alt="" height="236" src="/images/677438.jpg" width="420"/></p>
-<h1>stage1-ag8</h1>
+<p><img alt="" height="236" src="/images/677438.jpg" width="420"/></p><h1>stage1-ag8</h1>
 <h2>主題</h2>
 <p>討論小組主題</p>
 <p><span>stage1-ag8 機械手臂</span><br/><span>動機:爸爸搬重物很辛苦，希望他可以減輕負擔</span><br/><span>第二周:繪製零件圖</span><br/><span>第三周:進行coppeliasim模擬</span><br/><span>第四周:報告</span></p>
