--- a/content/index.html
+++ b/content/index.html
@@ -135,9 +135,9 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='stage1-ag8.html'>Next</a> >> stage1-ag8<br /><h1>About</h1>
 <p>github:<a href="https://github.com/40823107/cd2021">https://github.com/40823107/cd2021</a></p>
+<p>gitlab:<a href="https://gitlab.com/40823107/cd2021">https://gitlab.com/40823107/cd2021</a>(無法同步)</p>
 <p>site:<a href="https://40823107.github.io/cd2021/">https://40823107.github.io/cd2021/</a><span>.</span></p>
-<p><img alt="" height="236" src="./../images/677438.jpg" width="420"/></p>
-<br /> <a href='stage1-ag8.html'>Next</a> >> stage1-ag8</div>
+<p><img alt="" height="236" src="./../images/677438.jpg" width="420"/></p><br /> <a href='stage1-ag8.html'>Next</a> >> stage1-ag8</div>
         
     <!-- footer -->
       <div class="container">
