--- a/content/Onshape 零組件繪製.html
+++ b/content/Onshape 零組件繪製.html
@@ -133,8 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='stage1-ag8.html'>Next</a> >> stage1-ag8<br /><h1>Stage</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='stage1-ag8.html'>Next</a> >> stage1-ag8</div>
+    <div id="tipue_search_content">W16 << <a href='W16.html'>Previous</a> <a href='Task.html'>Next</a> >> Task<br /><h1>Onshape 零組件繪製</h1><br />W16 << <a href='W16.html'>Previous</a> <a href='Task.html'>Next</a> >> Task</div>
         
     <!-- footer -->
       <div class="container">
