--- a/content/W16.html
+++ b/content/W16.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Stage.html'>Stage</a><ul class='dropdown'><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題-1.html'>主題-1</a><li><a href='零件-1.html'>零件-1</a><li><a href='coppeliasim模擬.html'>coppeliasim模擬</a></li></ul><li class='has-children'><a href='stage2-ag8.html'>stage2-ag8</a><ul class='dropdown'><li><a href='主題-2.html'>主題-2</a><li><a href='零件-2.html'>零件-2</a><li><a href='模擬.html'>模擬</a></li></ul><li><a href='stage3-ag3.html'>stage3-ag3</a></li></ul><li><a href='RoboDK.html'>RoboDK</a><li><a href='W16.html'>W16</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li class='has-children'><a href='Task1.html'>Task1</a><ul class='dropdown'><li><a href='first task.html'>first task</a><li><a href='second task.html'>second task</a></li></ul><li><a href='Task2.html'>Task2</a><li><a href='Task3.html'>Task3</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Stage.html'>Stage</a><ul class='dropdown'><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題-1.html'>主題-1</a><li><a href='零件-1.html'>零件-1</a><li><a href='coppeliasim模擬.html'>coppeliasim模擬</a></li></ul><li class='has-children'><a href='stage2-ag8.html'>stage2-ag8</a><ul class='dropdown'><li><a href='主題-2.html'>主題-2</a><li><a href='零件-2.html'>零件-2</a><li><a href='模擬.html'>模擬</a></li></ul><li><a href='stage3-ag3.html'>stage3-ag3</a></li></ul><li><a href='RoboDK.html'>RoboDK</a><li class='has-children'><a href='W16.html'>W16</a><ul class='dropdown'><li><a href='Onshape 零組件繪製.html'>Onshape 零組件繪製</a></li></ul><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li class='has-children'><a href='Task1.html'>Task1</a><ul class='dropdown'><li><a href='first task.html'>first task</a><li><a href='second task.html'>second task</a></li></ul><li><a href='Task2.html'>Task2</a><li><a href='Task3.html'>Task3</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">RoboDK << <a href='RoboDK.html'>Previous</a> <a href='Task.html'>Next</a> >> Task<br /><h1>W16</h1>
+    <div id="tipue_search_content">RoboDK << <a href='RoboDK.html'>Previous</a> <a href='Onshape 零組件繪製.html'>Next</a> >> Onshape 零組件繪製<br /><h1>W16</h1>
 <h4>MTB_robot 的取放方塊流程規劃 (Process Planning):</h4>
 <h4>1. Onshape 零組件繪製 (20%)</h4>
 <p>零組件必須在<span> </span><a href="https://www.onshape.com/">Onshape</a><span> </span>繪圖, 並提供可公開分享之零組件連結於頁面及回報區中.</p>
@@ -144,7 +144,9 @@ img.add_border {
 <h4>4. 逆向運動學函式 (20%)</h4>
 <p>請根據 W15 線上課程內容之 Inverse Kinematics 方程式 (<a href="https://www.youtube.com/watch?v=IKOGwoJ2HLk&amp;t=35s">影片1</a><span> </span>或<a href="https://www.youtube.com/watch?v=eIZuz1XCd0w&amp;t=183s">影片2</a>), 以程式指定方塊取放之兩個位置 - (0.2, 0.7, 0.05) 與 (-0.3, -0.55, 0.05), 以前述 Leo Editor Lua 程式編寫方法, 分別採鍵盤控制與程式迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
 <h4>5. Python remote API 逆向運動學函式 (20%)</h4>
-<p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p><br />RoboDK << <a href='RoboDK.html'>Previous</a> <a href='Task.html'>Next</a> >> Task</div>
+<p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
+<p><br/><br/></p>
+<br />RoboDK << <a href='RoboDK.html'>Previous</a> <a href='Onshape 零組件繪製.html'>Next</a> >> Onshape 零組件繪製</div>
         
     <!-- footer -->
       <div class="container">
