手臂末端加入 components-gripper-suction pad 吸盤

--- a/config/content.htm
+++ b/config/content.htm
@@ -237,6 +237,7 @@ robot.MoveJ([0,0,0,0,10,-200])
 <p><br/><br/></p>
 <h2>Onshape 零組件繪製</h2>
 <h2>CoppeliaSim 4.1.0 MTB robot 場景</h2>
+<h2>手臂末端加入 components-gripper-suction pad 吸盤</h2>
 <h1>Task</h1>
 <h2>Task1</h2>
 <p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結.</span></p>
