--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,6 @@
 <h1>About</h1>
 <p>github:<a href="https://github.com/40823107/cd2021">https://github.com/40823107/cd2021</a></p>
-<p>gitlab:<a href="https://gitlab.com/40823107/cd2021">https://gitlab.com/40823107/cd2021</a>(無法同步)</p>
+<p>gitlab:<a href="https://gitlab.com/40823107/cd2021">https://gitlab.com/40823107/cd2021</a></p>
 <p>site:<a href="https://40823107.github.io/cd2021/">https://40823107.github.io/cd2021/</a><span>.</span></p>
 <p><img alt="" height="236" src="/images/677438.jpg" width="420"/></p>
 <h1>Stage</h1>
@@ -235,7 +235,9 @@ robot.MoveJ([0,0,0,0,10,-200])
 <h4>5. Python remote API 逆向運動學函式 (20%)</h4>
 <p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
 <p><br/><br/></p>
-<h2>Onshape 零組件繪製</h2><h1>Task</h1>
+<h2>Onshape 零組件繪製</h2>
+<h2>CoppeliaSim 4.1.0 MTB robot 場景</h2>
+<h1>Task</h1>
 <h2>Task1</h2>
 <p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結.</span></p>
 <p><span>已知 <a href="http://mde.tw/cd2021/downloads/stage3/stage3_2a.txt">stage3_2a.txt</a><span><span> </span></span><span>內容, 以及初步資料讀取程式:</span></span></p>
