--- a/content/逆向運動學函式.html
+++ b/content/逆向運動學函式.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W16 << <a href='W16.html'>Previous</a> <a href='CoppeliaSim 4.1.0 MTB robot 場景.html'>Next</a> >> CoppeliaSim 4.1.0 MTB robot 場景<br /><h1>Onshape 零組件繪製</h1>
-<br />W16 << <a href='W16.html'>Previous</a> <a href='CoppeliaSim 4.1.0 MTB robot 場景.html'>Next</a> >> CoppeliaSim 4.1.0 MTB robot 場景</div>
+    <div id="tipue_search_content">手臂末端加入 components-gripper-suction pad 吸盤 << <a href='手臂末端加入 components-gripper-suction pad 吸盤.html'>Previous</a> <a href='Task.html'>Next</a> >> Task<br /><h1>逆向運動學函式</h1>
+<br />手臂末端加入 components-gripper-suction pad 吸盤 << <a href='手臂末端加入 components-gripper-suction pad 吸盤.html'>Previous</a> <a href='Task.html'>Next</a> >> Task</div>
         
     <!-- footer -->
       <div class="container">
