零組件外觀

--- a/config/content.htm
+++ b/config/content.htm
@@ -236,7 +236,8 @@ robot.MoveJ([0,0,0,0,10,-200])
 <p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
 <p><br/><br/></p>
 <h2>Onshape 零組件繪製</h2>
-<h2>CoppeliaSim 4.1.0 MTB robot 場景</h2>
+<p>零組件外觀</p>
+<p><img alt="" height="230" src="/images/messageImage_1623643634390.jpg" width="500"/></p><h2>CoppeliaSim 4.1.0 MTB robot 場景</h2>
 <h2>手臂末端加入 components-gripper-suction pad 吸盤</h2>
 <h2>逆向運動學函式</h2>
 <h2>Python remote API 逆向運動學函式</h2>
