--- a/config/content.htm
+++ b/config/content.htm
@@ -244,7 +244,8 @@ robot.MoveJ([0,0,0,0,10,-200])
 <p></p><h2>CoppeliaSim 4.1.0 MTB robot 場景</h2>
 <p>加入軸之後模型場景</p>
 <p><img alt="" height="268" src="/images/messageImage_1623654423749.jpg" width="500"/></p>
-<p>CoppeliaSim <a href="https://drive.google.com/drive/folders/1U_nPIaVzepPCyhzpLzA8awPtFuhERIgw?usp=sharing">stl檔</a></p><h2>手臂末端加入 components-gripper-suction pad 吸盤</h2>
+<p>CoppeliaSim <a href="https://drive.google.com/drive/folders/1U_nPIaVzepPCyhzpLzA8awPtFuhERIgw?usp=sharing">stl檔</a></p>
+<p><span>CoppeliaSim操作video</span></p><h2>手臂末端加入 components-gripper-suction pad 吸盤</h2>
 <h2>逆向運動學函式</h2>
 <h2>Python remote API 逆向運動學函式</h2>
 <h1>Task</h1>
