加入吸盤式意圖

--- a/content/手臂末端加入 components-gripper-suction pad 吸盤.html
+++ b/content/手臂末端加入 components-gripper-suction pad 吸盤.html
@@ -134,7 +134,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">CoppeliaSim 4.1.0 MTB robot 場景 << <a href='CoppeliaSim 4.1.0 MTB robot 場景.html'>Previous</a> <a href='逆向運動學函式.html'>Next</a> >> 逆向運動學函式<br /><h1>手臂末端加入 components-gripper-suction pad 吸盤</h1>
-<br />CoppeliaSim 4.1.0 MTB robot 場景 << <a href='CoppeliaSim 4.1.0 MTB robot 場景.html'>Previous</a> <a href='逆向運動學函式.html'>Next</a> >> 逆向運動學函式</div>
+<p>加入吸盤式意圖</p>
+<p><img alt="" height="268" src="./../images/messageImage_1623662226843.jpg" width="500"/></p><br />CoppeliaSim 4.1.0 MTB robot 場景 << <a href='CoppeliaSim 4.1.0 MTB robot 場景.html'>Previous</a> <a href='逆向運動學函式.html'>Next</a> >> 逆向運動學函式</div>
         
     <!-- footer -->
       <div class="container">
