--- a/config/content.htm
+++ b/config/content.htm
@@ -247,11 +247,10 @@ robot.MoveJ([0,0,0,0,10,-200])
 <p>CoppeliaSim <a href="https://drive.google.com/drive/folders/1U_nPIaVzepPCyhzpLzA8awPtFuhERIgw?usp=sharing">stl檔</a></p>
 <p><span>CoppeliaSim操作video</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CpINnb9b2Lc" width="560"></iframe></span></p><h2>手臂末端加入 components-gripper-suction pad 吸盤</h2>
-<p>加入吸盤式意圖</p>
+<p>加入<span>suction pad</span>式意圖</p>
 <p><img alt="" height="268" src="/images/messageImage_1623662226843.jpg" width="500"/></p>
-<p>如何加入吸盤及程式碼video。</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/vqdGF9fJhJk" width="560"></iframe></p>
-<p></p><h2>逆向運動學函式</h2>
+<p>如何加入<span>suction pad、</span><span>force sensor、程式碼 </span>video。</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/vqdGF9fJhJk" width="560"></iframe></p><h2>逆向運動學函式</h2>
 <h2>Python remote API 逆向運動學函式</h2>
 <h1>Task</h1>
 <h2>Task1</h2>
