--- a/content/手臂末端加入 components-gripper-suction pad 吸盤.html
+++ b/content/手臂末端加入 components-gripper-suction pad 吸盤.html
@@ -134,11 +134,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">CoppeliaSim 4.1.0 MTB robot 場景 << <a href='CoppeliaSim 4.1.0 MTB robot 場景.html'>Previous</a> <a href='逆向運動學函式.html'>Next</a> >> 逆向運動學函式<br /><h1>手臂末端加入 components-gripper-suction pad 吸盤</h1>
-<p>加入吸盤式意圖</p>
+<p>加入<span>suction pad</span>式意圖</p>
 <p><img alt="" height="268" src="./../images/messageImage_1623662226843.jpg" width="500"/></p>
-<p>如何加入吸盤及程式碼video。</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/vqdGF9fJhJk" width="560"></iframe></p>
-<p></p><br />CoppeliaSim 4.1.0 MTB robot 場景 << <a href='CoppeliaSim 4.1.0 MTB robot 場景.html'>Previous</a> <a href='逆向運動學函式.html'>Next</a> >> 逆向運動學函式</div>
+<p>如何加入<span>suction pad、</span><span>force sensor、程式碼 </span>video。</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/vqdGF9fJhJk" width="560"></iframe></p><br />CoppeliaSim 4.1.0 MTB robot 場景 << <a href='CoppeliaSim 4.1.0 MTB robot 場景.html'>Previous</a> <a href='逆向運動學函式.html'>Next</a> >> 逆向運動學函式</div>
         
     <!-- footer -->
       <div class="container">
