--- a/config/content.htm
+++ b/config/content.htm
@@ -414,7 +414,8 @@ function sysCall_threadmain()
     end
 end</pre>
 <p></p><h2>Python remote API 逆向運動學函式</h2>
-<h1>Task</h1>
+<p>操作結果</p>
+<p><img alt="" src="https://s19.aconvert.com/convert/p3r68-cdx67/gy73f-kdl3w.gif" width="520"/></p><h1>Task</h1>
 <h2>Task1</h2>
 <p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結.</span></p>
 <p><span>已知 <a href="http://mde.tw/cd2021/downloads/stage3/stage3_2a.txt">stage3_2a.txt</a><span><span> </span></span><span>內容, 以及初步資料讀取程式:</span></span></p>
