--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -355,7 +355,8 @@ end </pre>
 <p></p><h2>逆向運動學函式</h2>
 <p>操作結果</p>
 <p><img alt="" height="272" src="https://s27.aconvert.com/convert/p3r68-cdx67/wrx4h-3ssb1.gif" width="520"/></p>
-<p>video<iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/efhPJLK4QY4" width="560"></iframe></p>
+<p>video</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/efhPJLK4QY4" width="560"></iframe></p>
 <p><span>Inverse Kinematics 方程式</span></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">function moving(x,y)
     a=0.4
