--- a/content/Python remote API 逆向運動學函式.html
+++ b/content/Python remote API 逆向運動學函式.html
@@ -134,7 +134,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">逆向運動學函式 << <a href='逆向運動學函式.html'>Previous</a> <a href='Task.html'>Next</a> >> Task<br /><h1>Python remote API 逆向運動學函式</h1>
-<br />逆向運動學函式 << <a href='逆向運動學函式.html'>Previous</a> <a href='Task.html'>Next</a> >> Task</div>
+<p>操作結果</p>
+<p><img alt="" src="https://s19.aconvert.com/convert/p3r68-cdx67/gy73f-kdl3w.gif" width="520"/></p><br />逆向運動學函式 << <a href='逆向運動學函式.html'>Previous</a> <a href='Task.html'>Next</a> >> Task</div>
         
     <!-- footer -->
       <div class="container">
