--- a/config/content.htm
+++ b/config/content.htm
@@ -352,6 +352,67 @@ function sysCall_sensing()
         end
     end
 end </pre>
+<h3>鍵盤控制</h3>
+<p></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">function sysCall_init()
+end
+
+function sysCall_trigger(inData)
+    -- callback function automatically added for backward compatibility
+    sim.breakForceSensor(inData.handle)
+end
+
+function sysCall_init()
+    joint01=sim.getObjectHandle('joint1')
+    joint02=sim.getObjectHandle('joint2')
+    joint03=sim.getObjectHandle('joint3')
+    jointz=sim.getObjectHandle('jointz')
+    sim.setJointTargetPosition(joint01,0)
+    sim.setJointTargetPosition(joint02,0)
+    sim.setJointTargetPosition(joint03,0)
+    sim.setJointTargetPosition(jointz,0)
+    deg1=0
+    deg2=0
+    zhing=false
+    pad=false
+end
+
+function sysCall_actuation()
+     message,auxiliaryData=sim.getSimulatorMessage()
+    while message~=-1 do
+        if (message==sim.message_keypress) then
+            if (auxiliaryData[1]==119) then
+            deg1=deg1+1
+            sim.setJointTargetPosition(joint01,deg1*math.pi/180)
+            end
+            if (auxiliaryData[1]==115) then
+            deg1=deg1-1
+            sim.setJointTargetPosition(joint01,deg1*math.pi/180)
+            end
+            if (auxiliaryData[1]==97) then
+            deg2=deg2+1
+            sim.setJointTargetPosition(joint02,deg2*math.pi/180)
+            end
+            if (auxiliaryData[1]==100) then
+            deg2=deg2-1
+            sim.setJointTargetPosition(joint02,deg2*math.pi/180)
+            end
+            if (auxiliaryData[1]==2007) then
+                sim.setJointTargetPosition(jointz,-0.55)
+                sim.setIntegerSignal("pad_switch",1)
+            end
+            if (auxiliaryData[1]==2008) then
+                sim.setJointTargetPosition(jointz,0)
+                sim.setIntegerSignal("pad_switch",1)
+            end
+            if (auxiliaryData[1]==98) then
+                sim.setIntegerSignal("pad_switch",0)
+            end
+            sim.setJointTargetPosition(joint03,(deg2-deg1)*math.pi/180)
+        end
+    message,auxiliaryData=sim.getSimulatorMessage()
+    end
+end</pre>
 <p></p><h2>逆向運動學函式</h2>
 <p>操作結果</p>
 <p><img alt="" height="272" src="https://s27.aconvert.com/convert/p3r68-cdx67/wrx4h-3ssb1.gif" width="520"/></p>
