--- a/content/逆向運動學函式.html
+++ b/content/逆向運動學函式.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Stage.html'>Stage</a><ul class='dropdown'><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題-1.html'>主題-1</a><li><a href='零件-1.html'>零件-1</a><li><a href='coppeliasim模擬.html'>coppeliasim模擬</a></li></ul><li class='has-children'><a href='stage2-ag8.html'>stage2-ag8</a><ul class='dropdown'><li><a href='主題-2.html'>主題-2</a><li><a href='零件-2.html'>零件-2</a><li><a href='模擬.html'>模擬</a></li></ul><li><a href='stage3-ag3.html'>stage3-ag3</a></li></ul><li><a href='RoboDK.html'>RoboDK</a><li class='has-children'><a href='W16.html'>W16</a><ul class='dropdown'><li><a href='Onshape 零組件繪製.html'>Onshape 零組件繪製</a><li><a href='CoppeliaSim 4.1.0 MTB robot 場景.html'>CoppeliaSim 4.1.0 MTB robot 場景</a><li><a href='手臂末端加入 components-gripper-suction pad 吸盤.html'>手臂末端加入 components-gripper-suction pad 吸盤</a><li><a href='逆向運動學函式.html'>逆向運動學函式</a><li><a href='Python remote API 逆向運動學函式.html'>Python remote API 逆向運動學函式</a></li></ul><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li class='has-children'><a href='Task1.html'>Task1</a><ul class='dropdown'><li><a href='first task.html'>first task</a><li><a href='second task.html'>second task</a></li></ul><li><a href='Task2.html'>Task2</a><li><a href='Task3.html'>Task3</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Stage.html'>Stage</a><ul class='dropdown'><li class='has-children'><a href='stage1-ag8.html'>stage1-ag8</a><ul class='dropdown'><li><a href='主題-1.html'>主題-1</a><li><a href='零件-1.html'>零件-1</a><li><a href='coppeliasim模擬.html'>coppeliasim模擬</a></li></ul><li class='has-children'><a href='stage2-ag8.html'>stage2-ag8</a><ul class='dropdown'><li><a href='主題-2.html'>主題-2</a><li><a href='零件-2.html'>零件-2</a><li><a href='模擬.html'>模擬</a></li></ul><li><a href='stage3-ag3.html'>stage3-ag3</a></li></ul><li><a href='RoboDK.html'>RoboDK</a><li class='has-children'><a href='W16.html'>W16</a><ul class='dropdown'><li><a href='Onshape 零組件繪製.html'>Onshape 零組件繪製</a><li><a href='CoppeliaSim 4.1.0 MTB robot 場景.html'>CoppeliaSim 4.1.0 MTB robot 場景</a><li class='has-children'><a href='手臂末端加入 components-gripper-suction pad 吸盤.html'>手臂末端加入 components-gripper-suction pad 吸盤</a><ul class='dropdown'><li><a href='鍵盤控制.html'>鍵盤控制</a></li></ul><li><a href='逆向運動學函式.html'>逆向運動學函式</a><li><a href='Python remote API 逆向運動學函式.html'>Python remote API 逆向運動學函式</a></li></ul><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li class='has-children'><a href='Task1.html'>Task1</a><ul class='dropdown'><li><a href='first task.html'>first task</a><li><a href='second task.html'>second task</a></li></ul><li><a href='Task2.html'>Task2</a><li><a href='Task3.html'>Task3</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">手臂末端加入 components-gripper-suction pad 吸盤 << <a href='手臂末端加入 components-gripper-suction pad 吸盤.html'>Previous</a> <a href='Python remote API 逆向運動學函式.html'>Next</a> >> Python remote API 逆向運動學函式<br /><h1>逆向運動學函式</h1>
+    <div id="tipue_search_content">鍵盤控制 << <a href='鍵盤控制.html'>Previous</a> <a href='Python remote API 逆向運動學函式.html'>Next</a> >> Python remote API 逆向運動學函式<br /><h1>逆向運動學函式</h1>
 <p>操作結果</p>
 <p><img alt="" height="272" src="https://s27.aconvert.com/convert/p3r68-cdx67/wrx4h-3ssb1.gif" width="520"/></p>
 <p>video</p>
@@ -194,7 +194,7 @@ function sysCall_threadmain()
     sim.wait(3)
     end
 end</pre>
-<p></p><br />手臂末端加入 components-gripper-suction pad 吸盤 << <a href='手臂末端加入 components-gripper-suction pad 吸盤.html'>Previous</a> <a href='Python remote API 逆向運動學函式.html'>Next</a> >> Python remote API 逆向運動學函式</div>
+<p></p><br />鍵盤控制 << <a href='鍵盤控制.html'>Previous</a> <a href='Python remote API 逆向運動學函式.html'>Next</a> >> Python remote API 逆向運動學函式</div>
         
     <!-- footer -->
       <div class="container">
