--- a/content/鍵盤控制.html
+++ b/content/鍵盤控制.html
@@ -133,113 +133,68 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">CoppeliaSim 4.1.0 MTB robot 場景 << <a href='CoppeliaSim 4.1.0 MTB robot 場景.html'>Previous</a> <a href='鍵盤控制.html'>Next</a> >> 鍵盤控制<br /><h1>手臂末端加入 components-gripper-suction pad 吸盤</h1>
-<p>加入<span>suction pad</span>式意圖</p>
-<p><img alt="" height="268" src="./../images/messageImage_1623662226843.jpg" width="500"/></p>
-<p>如何加入<span>suction pad、</span><span>force sensor、程式碼 </span>video。</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/vqdGF9fJhJk" width="560"></iframe></p>
-<p><span>suction pad</span></p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">function sysCall_init() 
-    objectHandle=sim.getObjectHandle('suctionPad')
-    sim.setUserParameter(objectHandle,'@enable','')
-    modelBase=sim.getObjectAssociatedWithScript(sim.handle_self)
-    robotBase=modelBase
-    while true do
-        robotBase=sim.getObjectParent(robotBase)
-        if robotBase==-1 then
-            robotName='Dobot'
-            break
-        end
-        robotName=sim.getObjectName(robotBase)
-        suffix,suffixlessName=sim.getNameSuffix(robotName)
-        if suffixlessName=='Dobot' then
-            break
-        end
-    end
-
-    s=sim.getObjectHandle('suctionPadSensor')
-    l=sim.getObjectHandle('suctionPadLoopClosureDummy1')
-    l2=sim.getObjectHandle('suctionPadLoopClosureDummy2')
-    b=sim.getObjectHandle('suctionPad')
-    suctionPadLink=sim.getObjectHandle('suctionPadLink')
-    local gripperBase=sim.getObjectAssociatedWithScript(sim.handle_self)
-
-    infiniteStrength=sim.getScriptSimulationParameter(sim.handle_self,'infiniteStrength')
-    maxPullForce=sim.getScriptSimulationParameter(sim.handle_self,'maxPullForce')
-    maxShearForce=sim.getScriptSimulationParameter(sim.handle_self,'maxShearForce')
-    maxPeelTorque=sim.getScriptSimulationParameter(sim.handle_self,'maxPeelTorque')
-
-    sim.setLinkDummy(l,-1)
-    sim.setObjectParent(l,b,true)
-    m=sim.getObjectMatrix(l2,-1)
-    sim.setObjectMatrix(l,-1,m)
+    <div id="tipue_search_content">手臂末端加入 components-gripper-suction pad 吸盤 << <a href='手臂末端加入 components-gripper-suction pad 吸盤.html'>Previous</a> <a href='逆向運動學函式.html'>Next</a> >> 逆向運動學函式<br /><h1>鍵盤控制</h1>
+<p></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">function sysCall_init()
 end
 
-function sysCall_cleanup() 
-    sim.setLinkDummy(l,-1)
-    sim.setObjectParent(l,b,true)
-    m=sim.getObjectMatrix(l2,-1)
-    sim.setObjectMatrix(l,-1,m)
-end 
+function sysCall_trigger(inData)
+    -- callback function automatically added for backward compatibility
+    sim.breakForceSensor(inData.handle)
+end
 
-function sysCall_sensing() 
-    parent=sim.getObjectParent(l)
-    local sig=sim.getIntegerSignal("pad_switch")
-    if (not sig) or (sig==0) then
-        if (parent~=b) then
-            sim.setLinkDummy(l,-1)
-            sim.setObjectParent(l,b,true)
-            m=sim.getObjectMatrix(l2,-1)
-            sim.setObjectMatrix(l,-1,m)
-        end
-    else
-        if (parent==b) then
-            index=0
-            while true do
-                shape=sim.getObjects(index,sim.object_shape_type)
-                if (shape==-1) then
-                    break
-                end
-                local res,val=sim.getObjectInt32Parameter(shape,sim.shapeintparam_respondable)
-                if (shape~=b) and (val~=0) and (sim.checkProximitySensor(s,shape)==1) then
-                    -- Ok, we found a respondable shape that was detected
-                    -- We connect to that shape:
-                    -- Make sure the two dummies are initially coincident:
-                    sim.setObjectParent(l,b,true)
-                    m=sim.getObjectMatrix(l2,-1)
-                    sim.setObjectMatrix(l,-1,m)
-                    -- Do the connection:
-                    sim.setObjectParent(l,shape,true)
-                    sim.setLinkDummy(l,l2)
-                    break
-                end
-                index=index+1
+function sysCall_init()
+    joint01=sim.getObjectHandle('joint1')
+    joint02=sim.getObjectHandle('joint2')
+    joint03=sim.getObjectHandle('joint3')
+    jointz=sim.getObjectHandle('jointz')
+    sim.setJointTargetPosition(joint01,0)
+    sim.setJointTargetPosition(joint02,0)
+    sim.setJointTargetPosition(joint03,0)
+    sim.setJointTargetPosition(jointz,0)
+    deg1=0
+    deg2=0
+    zhing=false
+    pad=false
+end
+
+function sysCall_actuation()
+     message,auxiliaryData=sim.getSimulatorMessage()
+    while message~=-1 do
+        if (message==sim.message_keypress) then
+            if (auxiliaryData[1]==119) then
+            deg1=deg1+1
+            sim.setJointTargetPosition(joint01,deg1*math.pi/180)
             end
-        else
-            -- Here we have an object attached
-            if (infiniteStrength==false) then
-                -- We might have to conditionally beak it apart!
-                result,force,torque=sim.readForceSensor(suctionPadLink) -- Here we read the median value out of 5 values (check the force sensor prop. dialog)
-                if (result&gt;0) then
-                    breakIt=false
-                    if (force[3]&gt;maxPullForce) then breakIt=true end
-                    sf=math.sqrt(force[1]*force[1]+force[2]*force[2])
-                    if (sf&gt;maxShearForce) then breakIt=true end
-                    if (torque[1]&gt;maxPeelTorque) then breakIt=true end
-                    if (torque[2]&gt;maxPeelTorque) then breakIt=true end
-                    if (breakIt) then
-                        -- We break the link:
-                        sim.setLinkDummy(l,-1)
-                        sim.setObjectParent(l,b,true)
-                        m=sim.getObjectMatrix(l2,-1)
-                        sim.setObjectMatrix(l,-1,m)
-                    end
-                end
+            if (auxiliaryData[1]==115) then
+            deg1=deg1-1
+            sim.setJointTargetPosition(joint01,deg1*math.pi/180)
             end
+            if (auxiliaryData[1]==97) then
+            deg2=deg2+1
+            sim.setJointTargetPosition(joint02,deg2*math.pi/180)
+            end
+            if (auxiliaryData[1]==100) then
+            deg2=deg2-1
+            sim.setJointTargetPosition(joint02,deg2*math.pi/180)
+            end
+            if (auxiliaryData[1]==2007) then
+                sim.setJointTargetPosition(jointz,-0.55)
+                sim.setIntegerSignal("pad_switch",1)
+            end
+            if (auxiliaryData[1]==2008) then
+                sim.setJointTargetPosition(jointz,0)
+                sim.setIntegerSignal("pad_switch",1)
+            end
+            if (auxiliaryData[1]==98) then
+                sim.setIntegerSignal("pad_switch",0)
+            end
+            sim.setJointTargetPosition(joint03,(deg2-deg1)*math.pi/180)
         end
+    message,auxiliaryData=sim.getSimulatorMessage()
     end
-end </pre>
-<br />CoppeliaSim 4.1.0 MTB robot 場景 << <a href='CoppeliaSim 4.1.0 MTB robot 場景.html'>Previous</a> <a href='鍵盤控制.html'>Next</a> >> 鍵盤控制</div>
+end</pre>
+<p></p><br />手臂末端加入 components-gripper-suction pad 吸盤 << <a href='手臂末端加入 components-gripper-suction pad 吸盤.html'>Previous</a> <a href='逆向運動學函式.html'>Next</a> >> 逆向運動學函式</div>
         
     <!-- footer -->
       <div class="container">
