--- a/config/content.htm
+++ b/config/content.htm
@@ -353,7 +353,8 @@ function sysCall_sensing()
     end
 end </pre>
 <h3>鍵盤控制</h3>
-<p></p>
+<p>video</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/RfWXUunxv4g" width="560"></iframe><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mwcvlYcIOQk" width="560"></iframe></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">function sysCall_init()
 end
 
