--- a/content/鍵盤控制.html
+++ b/content/鍵盤控制.html
@@ -134,7 +134,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">手臂末端加入 components-gripper-suction pad 吸盤 << <a href='手臂末端加入 components-gripper-suction pad 吸盤.html'>Previous</a> <a href='逆向運動學函式.html'>Next</a> >> 逆向運動學函式<br /><h1>鍵盤控制</h1>
-<p></p>
+<p>video</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/RfWXUunxv4g" width="560"></iframe><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mwcvlYcIOQk" width="560"></iframe></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">function sysCall_init()
 end
 
