--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -353,7 +353,8 @@ function sysCall_sensing()
     end
 end </pre>
 <h3>鍵盤控制</h3>
-<p></p>
+<p>video</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/RfWXUunxv4g" width="560"></iframe><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mwcvlYcIOQk" width="560"></iframe></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">function sysCall_init()
 end
 
@@ -415,7 +416,7 @@ function sysCall_actuation()
 end</pre>
 <p></p><h2>逆向運動學函式</h2>
 <p>操作結果</p>
-<p><img alt="" height="272" src="https://s27.aconvert.com/convert/p3r68-cdx67/wrx4h-3ssb1.gif" width="520"/></p>
+<p><img alt="" height="272" src="/images/e28po-6nw6l.gif" width="521"/></p>
 <p>video</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/efhPJLK4QY4" width="560"></iframe></p>
 <p><span>Inverse Kinematics 方程式</span></p>
