--- a/content/Python remote API 逆向運動學函式.html
+++ b/content/Python remote API 逆向運動學函式.html
@@ -135,7 +135,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">逆向運動學函式 << <a href='逆向運動學函式.html'>Previous</a> <a href='Task.html'>Next</a> >> Task<br /><h1>Python remote API 逆向運動學函式</h1>
 <p>操作結果</p>
-<p><img alt="" height="277" src="https://s19.aconvert.com/convert/p3r68-cdx67/gy73f-kdl3w.gif" width="520"/></p>
+<p><img alt="" height="277" src="./../images/bqc8z-z7eud.gif" width="520"/></p>
 <p>video</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/YA_WAA6JD9U" width="560"></iframe></p>
 <p><span>迴圈</span></p>
