--- a/content/逆向運動學函式.html
+++ b/content/逆向運動學函式.html
@@ -135,7 +135,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">鍵盤控制 << <a href='鍵盤控制.html'>Previous</a> <a href='Python remote API 逆向運動學函式.html'>Next</a> >> Python remote API 逆向運動學函式<br /><h1>逆向運動學函式</h1>
 <p>操作結果</p>
-<p><img alt="" height="272" src="https://s27.aconvert.com/convert/p3r68-cdx67/wrx4h-3ssb1.gif" width="520"/></p>
+<p><img alt="" height="272" src="./../images/e28po-6nw6l.gif" width="521"/></p>
 <p>video</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/efhPJLK4QY4" width="560"></iframe></p>
 <p><span>Inverse Kinematics 方程式</span></p>
