--- a/config/content.htm
+++ b/config/content.htm
@@ -30,7 +30,8 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/3yt087L3Jt4" width="560"></iframe></p>
 <h2>stage2-ag8</h2>
 <h3>主題</h3>
-<h3>零件</h3>
+<p>偶然在youtube上看見這個機構，覺得很酷所以把這個機構當作主題。</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/8QzeYpuuhjw" width="560"></iframe></p><h3>零件</h3>
 <h3>模擬</h3>
 <h2>stage3-ag3</h2>
 <h1>RoboDK</h1>
