--- a/content/主題-2.html
+++ b/content/主題-2.html
@@ -134,7 +134,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">stage2-ag8 << <a href='stage2-ag8.html'>Previous</a> <a href='零件-2.html'>Next</a> >> 零件-2<br /><h1>主題-2</h1>
-<br />stage2-ag8 << <a href='stage2-ag8.html'>Previous</a> <a href='零件-2.html'>Next</a> >> 零件-2</div>
+<p>偶然在youtube上看見這個機構，覺得很酷所以把這個機構當作主題。</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/8QzeYpuuhjw" width="560"></iframe></p><br />stage2-ag8 << <a href='stage2-ag8.html'>Previous</a> <a href='零件-2.html'>Next</a> >> 零件-2</div>
         
     <!-- footer -->
       <div class="container">
