--- a/content/零件-2.html
+++ b/content/零件-2.html
@@ -134,7 +134,40 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">主題-2 << <a href='主題-2.html'>Previous</a> <a href='模擬.html'>Next</a> >> 模擬<br /><h1>零件-2</h1>
-<br />主題-2 << <a href='主題-2.html'>Previous</a> <a href='模擬.html'>Next</a> >> 模擬</div>
+<p>組合圖(零件檔、stl)</p>
+<p><img alt="" height="320" src="./../images/Stage2-8_210417_26.jpg" width="350"/></p>
+<p>齒輪</p>
+<p><img caption="false" height="308" src="./../images/Stage2-8_210417_24.jpg" width="300"/></p>
+<p><img alt="" height="334" src="./../images/Stage2-8_210417_8.jpg" width="300"/></p>
+<p><img alt="" height="266" src="./../images/Stage2-8_210417_15.jpg" width="300"/></p>
+<p><img alt="" height="300" src="./../images/Stage2-8_210417_19.jpg" width="300"/></p>
+<p>連接件</p>
+<p><img alt="" height="371" src="./../images/Stage2-8_210417_20.jpg" width="300"/></p>
+<p><img alt="" height="370" src="./../images/Stage2-8_210417_17.jpg" width="300"/></p>
+<p><img alt="" height="441" src="./../images/Stage2-8_210417_18.jpg" width="300"/></p>
+<p><img alt="" height="371" src="./../images/Stage2-8_210417_20.jpg" width="300"/></p>
+<p><img alt="" height="366" src="./../images/Stage2-8_210417_22.jpg" width="300"/></p>
+<p><img alt="" height="410" src="./../images/Stage2-8_210417_21.jpg" width="300"/></p>
+<p><img alt="" height="389" src="./../images/Stage2-8_210417_25.jpg" width="300"/></p>
+<p>螺釘、螺帽</p>
+<p><img alt="" height="334" src="./../images/Stage2-8_210417_7.jpg" width="300"/></p>
+<p><img alt="" height="147" src="./../images/Stage2-8_210417_9.jpg" width="300"/></p>
+<p><img alt="" height="366" src="./../images/Stage2-8_210417_11.jpg" width="300"/></p>
+<p><img alt="" height="415" src="./../images/Stage2-8_210417_12.jpg" width="300"/></p>
+<p><img alt="" height="273" src="./../images/Stage2-8_210417_13.jpg" width="300"/></p>
+<p><img alt="" height="265" src="./../images/Stage2-8_210417_14.jpg" width="300"/></p>
+<p>本體</p>
+<p><img alt="" height="213" src="./../images/Stage2-8_210417_0.jpg" width="300"/></p>
+<p><img alt="" height="254" src="./../images/Stage2-8_210417_1.jpg" width="300"/></p>
+<p><img alt="" height="335" src="./../images/Stage2-8_210417_5.jpg" width="300"/></p>
+<p><img alt="" height="271" src="./../images/Stage2-8_210417_23.jpg" width="300"/></p>
+<p><img alt="" height="228" src="./../images/Stage2-8_210417_6.jpg" width="300"/></p>
+<p><img alt="" height="375" src="./../images/Stage2-8_210417_2.jpg" width="300"/></p>
+<p><img alt="" height="361" src="./../images/Stage2-8_210417_3.jpg" width="300"/></p>
+<p><img alt="" height="341" src="./../images/Stage2-8_210417_4.jpg" width="300"/></p>
+<p></p>
+<p></p>
+<p></p><br />主題-2 << <a href='主題-2.html'>Previous</a> <a href='模擬.html'>Next</a> >> 模擬</div>
         
     <!-- footer -->
       <div class="container">
