--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -32,7 +32,40 @@
 <h3>主題</h3>
 <p>偶然在youtube上看見這個機構，覺得很酷所以把這個機構當作主題。</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/8QzeYpuuhjw" width="560"></iframe></p><h3>零件</h3>
-<h3>模擬</h3>
+<p>組合圖(<a href="https://drive.google.com/drive/folders/1pxO63j_fL6_8JmQw5cWYNjr5g_EWPiDW?usp=sharing">零件檔</a>、<a href="https://drive.google.com/drive/folders/16jtkQZWVNSEkSj2PwDPdUDCwZb9NJ792?usp=sharing">stl</a>)</p>
+<p><img alt="" height="320" src="/images/Stage2-8_210417_26.jpg" width="350"/></p>
+<p>齒輪</p>
+<p><img caption="false" height="308" src="/images/Stage2-8_210417_24.jpg" width="300"/></p>
+<p><img alt="" height="334" src="/images/Stage2-8_210417_8.jpg" width="300"/></p>
+<p><img alt="" height="266" src="/images/Stage2-8_210417_15.jpg" width="300"/></p>
+<p><img alt="" height="300" src="/images/Stage2-8_210417_19.jpg" width="300"/></p>
+<p>連接件</p>
+<p><img alt="" height="371" src="/images/Stage2-8_210417_20.jpg" width="300"/></p>
+<p><img alt="" height="370" src="/images/Stage2-8_210417_17.jpg" width="300"/></p>
+<p><img alt="" height="441" src="/images/Stage2-8_210417_18.jpg" width="300"/></p>
+<p><img alt="" height="371" src="/images/Stage2-8_210417_20.jpg" width="300"/></p>
+<p><img alt="" height="366" src="/images/Stage2-8_210417_22.jpg" width="300"/></p>
+<p><img alt="" height="410" src="/images/Stage2-8_210417_21.jpg" width="300"/></p>
+<p><img alt="" height="389" src="/images/Stage2-8_210417_25.jpg" width="300"/></p>
+<p>螺釘、螺帽</p>
+<p><img alt="" height="334" src="/images/Stage2-8_210417_7.jpg" width="300"/></p>
+<p><img alt="" height="147" src="/images/Stage2-8_210417_9.jpg" width="300"/></p>
+<p><img alt="" height="366" src="/images/Stage2-8_210417_11.jpg" width="300"/></p>
+<p><img alt="" height="415" src="/images/Stage2-8_210417_12.jpg" width="300"/></p>
+<p><img alt="" height="273" src="/images/Stage2-8_210417_13.jpg" width="300"/></p>
+<p><img alt="" height="265" src="/images/Stage2-8_210417_14.jpg" width="300"/></p>
+<p>本體</p>
+<p><img alt="" height="213" src="/images/Stage2-8_210417_0.jpg" width="300"/></p>
+<p><img alt="" height="254" src="/images/Stage2-8_210417_1.jpg" width="300"/></p>
+<p><img alt="" height="335" src="/images/Stage2-8_210417_5.jpg" width="300"/></p>
+<p><img alt="" height="271" src="/images/Stage2-8_210417_23.jpg" width="300"/></p>
+<p><img alt="" height="228" src="/images/Stage2-8_210417_6.jpg" width="300"/></p>
+<p><img alt="" height="375" src="/images/Stage2-8_210417_2.jpg" width="300"/></p>
+<p><img alt="" height="361" src="/images/Stage2-8_210417_3.jpg" width="300"/></p>
+<p><img alt="" height="341" src="/images/Stage2-8_210417_4.jpg" width="300"/></p>
+<p></p>
+<p></p>
+<p></p><h3>模擬</h3>
 <h2>stage3-ag3</h2>
 <h1>RoboDK</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/OzVrltmZmNE" width="560"></iframe></p>
