--- a/content/零件-2.html
+++ b/content/零件-2.html
@@ -134,7 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">主題-2 << <a href='主題-2.html'>Previous</a> <a href='模擬.html'>Next</a> >> 模擬<br /><h1>零件-2</h1>
-<p>組合圖(零件檔、stl)</p>
+<p>組合圖(<a href="https://drive.google.com/drive/folders/1pxO63j_fL6_8JmQw5cWYNjr5g_EWPiDW?usp=sharing">零件檔</a>、<a href="https://drive.google.com/drive/folders/16jtkQZWVNSEkSj2PwDPdUDCwZb9NJ792?usp=sharing">stl</a>)</p>
 <p><img alt="" height="320" src="./../images/Stage2-8_210417_26.jpg" width="350"/></p>
 <p>齒輪</p>
 <p><img caption="false" height="308" src="./../images/Stage2-8_210417_24.jpg" width="300"/></p>
